force-app/main/default/objects/copado__Bundled_UserStory__c/copado__Bundled_UserStory__c.object-meta.xml
<CustomObject>
    <label>Bundled User Story</label>
    <nameField>
        <displayFormat>BUSB-{0000000}</displayFormat>
        <label>Bundled User Story Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundled User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>