force-app/main/default/objects/copado__Bundled_UserStory__c/fields/copado__User_Story__c.field-meta.xml
<CustomField>
    <fullName>copado__User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipName>Artifacts_UserStories</relationshipName>
    <type>Lookup</type>
</CustomField>